<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etPantalla"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:text="@string/strpantalla"
        android:enabled="false"
        android:background="@color/blanco"
        android:textColor="@color/negro"
        android:textSize="30sp"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:maxLength="40"
        />
    <GridLayout
        android:id="@+id/gLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:useDefaultMargins="true"
        >

        <!--Primera fila-->
        <Button
            android:id="@+id/btnNueve"
            android:text="@string/strnueve"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnPunto"
            android:text="@string/strpunto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnborrar"
            android:text="@string/strborrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
             />

        <Button
            android:id="@+id/btnSumar"
            android:text="@string/strsumar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />
        <!--Segunda fila-->
        <Button
            android:id="@+id/btnSeis"
            android:text="@string/strseis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnSiete"
            android:text="@string/strsiete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnOcho"
            android:text="@string/strocho"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnRestar"
            android:text="@string/strrestar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <!--Tercera fila-->
        <Button
            android:id="@+id/btnTres"
            android:text="@string/strtres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnCuatro"
            android:text="@string/strcuatro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnCinco"
            android:text="@string/strcinco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnMultiplicar"
            android:text="@string/strmultiplicar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <!--Cuarta fila-->
        <Button
            android:id="@+id/btnCero"
            android:text="@string/strcero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnUno"
            android:text="@string/struno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnDos"
            android:text="@string/strdos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/btnDividir"
            android:text="@string/strdividir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

        <!--Quinta fila-->
        <ImageView
            android:id="@+id/btnBorrarUno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@drawable/btnborraruno"
            />
        <Button
            android:id="@+id/btnIgual"
            android:text="@string/strigual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="4"
            android:layout_columnWeight="1"
            android:textSize="30sp"
            />

    </GridLayout>
</LinearLayout>